# yew-ssg

./: Cargo.toml
src/: main.rs
src/pages/: contact.rs  faq.rs  home.rs  mod.rs
