[package]
name = "pages-experiment"
version = "0.1.0"
authors = ["Philip Peterson <philip.c.peterson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
genawaiter = "0.99.1"